Implemented add new task and display it in recycler view. Fixes some bugs in DBHandler.

--- a/app/src/main/res/layout/to_do_list_recycler.xml
+++ b/app/src/main/res/layout/to_do_list_recycler.xml
@@ -7,8 +7,8 @@
 
     <RelativeLayout
         android:id="@+id/taskSection"
-        android:layout_width="413dp"
-        android:layout_height="134dp">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/taskName"
