homepage layout rearrange + lottie attempt

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,10 +23,12 @@
         android:id="@+id/newUserButton"
         android:layout_width="320dp"
         android:layout_height="65dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="24dp"
+        android:background="@drawable/btn_circle"
         android:backgroundTint="#6F5642"
         android:text="new user?"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:cornerRadius="70dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,10 +65,12 @@
         android:id="@+id/loginButton"
         android:layout_width="320dp"
         android:layout_height="65dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="60dp"
+        android:background="@drawable/btn_circle"
         android:backgroundTint="#6F5642"
         android:text="login"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:cornerRadius="70dp"
         app:layout_constraintStart_toStartOf="parent"
