--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -8,17 +8,17 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="406dp"
+        android:layout_width="0dp"
         android:layout_height="204dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="184dp"
         android:layout_marginEnd="3dp"
         android:orientation="horizontal"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
 
 
         <androidx.cardview.widget.CardView
@@ -32,14 +32,13 @@
 
 
             <RelativeLayout
-
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#ECE6C2">
 
 
                 <ImageView
-                    android:id="@+id/imageView10"
+                    android:id="@+id/imageView4"
                     android:layout_width="75dp"
                     android:layout_height="75dp"
                     android:layout_centerHorizontal="true"
@@ -48,9 +47,9 @@
 
                 <Button
                     android:id="@+id/toDoListButton"
-                    android:layout_width="160dp"
+                    android:layout_width="140dp"
                     android:layout_height="50dp"
-                    android:layout_below="@id/imageView10"
+                    android:layout_below="@id/imageView4"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/btn_bg"
@@ -79,7 +78,7 @@
                 android:background="#ECE6C2">
 
                 <ImageView
-                    android:id="@+id/imageView2"
+                    android:id="@+id/imageView11"
                     android:layout_width="75dp"
                     android:layout_height="75dp"
                     android:layout_centerHorizontal="true"
@@ -88,9 +87,9 @@
 
                 <Button
                     android:id="@+id/timerButton"
-                    android:layout_width="160dp"
+                    android:layout_width="140dp"
                     android:layout_height="50dp"
-                    android:layout_below="@id/imageView2"
+                    android:layout_below="@id/imageView11"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/btn_bg"
@@ -104,13 +103,14 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="406dp"
+        android:layout_width="0dp"
         android:layout_height="204dp"
-        android:layout_marginStart="2dp"
+        android:layout_marginStart="3dp"
         android:layout_marginEnd="3dp"
         android:orientation="horizontal"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
@@ -141,7 +141,7 @@
 
                 <Button
                     android:id="@+id/notesButton"
-                    android:layout_width="160dp"
+                    android:layout_width="140dp"
                     android:layout_height="50dp"
                     android:layout_below="@id/imageView"
                     android:layout_centerHorizontal="true"
@@ -169,17 +169,9 @@
                 android:background="#ECE6C2">
 
 
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="75dp"
-                    android:layout_height="75dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="10dp"
-                    app:srcCompat="@drawable/ic_calendar" />
-
                 <Button
                     android:id="@+id/calendarButton"
-                    android:layout_width="160dp"
+                    android:layout_width="140dp"
                     android:layout_height="50dp"
                     android:layout_below="@id/imageView2"
                     android:layout_centerHorizontal="true"
@@ -190,20 +182,29 @@
                     android:textColor="#FFFFFF"
                     android:textSize="20sp" />
 
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="10dp"
+                    app:srcCompat="@drawable/ic_calendar" />
+
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="0dp"
         android:layout_height="100dp"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="16dp"
         android:orientation="horizontal"
         android:padding="5dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -211,11 +212,13 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
-            android:layout_weight="0.3">
+            android:layout_weight="0.3"
+            app:cardCornerRadius="5dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:backgroundTint="#ece6c2">
 
                 <ImageView
                     android:id="@+id/imageView6"
@@ -234,10 +237,10 @@
                     android:layout_below="@id/imageView6"
                     android:layout_centerHorizontal="true"
                     android:layout_marginStart="0dp"
-                    android:layout_marginTop="0dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginEnd="0dp"
                     android:layout_marginBottom="0dp"
-                    android:text="profile" />
+                    android:text="Profile" />
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
@@ -245,7 +248,8 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
-            android:layout_weight="0.3">
+            android:layout_weight="0.3"
+            app:cardCornerRadius="5dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -267,7 +271,7 @@
                     android:layout_below="@id/imageView7"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="5dp"
-                    android:text="contact" />
+                    android:text="Contact" />
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
@@ -275,7 +279,8 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
-            android:layout_weight="0.3">
+            android:layout_weight="0.3"
+            app:cardCornerRadius="5dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -298,7 +303,7 @@
                     android:layout_below="@id/imageView8"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="5dp"
-                    android:text="TextView" />
+                    android:text="FAQ" />
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
@@ -306,7 +311,8 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
-            android:layout_weight="0.3" >
+            android:layout_weight="0.3"
+            app:cardCornerRadius="5dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -329,7 +335,7 @@
                     android:layout_below="@id/imageView9"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="5dp"
-                    android:text="TextView" />
+                    android:text="Settings" />
 
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
