--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -10,10 +10,12 @@
         android:id="@+id/createButton"
         android:layout_width="320dp"
         android:layout_height="65dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="60dp"
+        android:background="@drawable/btn_circle"
         android:backgroundTint="#6F5642"
         android:text="create account"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:cornerRadius="70dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,10 +25,12 @@
         android:id="@+id/backButton"
         android:layout_width="320dp"
         android:layout_height="65dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="28dp"
+        android:background="@drawable/btn_circle"
         android:backgroundTint="#6F5642"
         android:text="back to login"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:cornerRadius="70dp"
         app:layout_constraintStart_toStartOf="parent"
