Revert "fix homepage"
This reverts commit ba37a24a

--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -7,65 +7,11 @@
     tools:context=".HomePage">
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="204dp"
-        android:layout_marginStart="3dp"
-        android:layout_marginEnd="3dp"
-        android:orientation="horizontal"
-        android:padding="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
-
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            app:cardCornerRadius="20dp"
-            app:cardElevation="5dp">
-
-
-            <RelativeLayout
-
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#ECE6C2">
-
-                <ImageView
-                    android:id="@+id/imageView3"
-                    android:layout_width="75dp"
-                    android:layout_height="75dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="10dp"
-                    app:srcCompat="@drawable/ic_friendlist" />
-
-                <Button
-                    android:id="@+id/button"
-                    android:layout_width="159dp"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/imageView3"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/btn_bg"
-                    android:text="Friends List"
-                    android:textColor="#FFFFFF"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
-
-            </RelativeLayout>
-
-        </androidx.cardview.widget.CardView>
-
-    </LinearLayout>
-
-    <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="204dp"
         android:layout_marginStart="3dp"
+        android:layout_marginTop="184dp"
         android:layout_marginEnd="3dp"
         android:orientation="horizontal"
         android:padding="10dp"
@@ -108,11 +54,11 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/btn_bg"
                     android:fontFamily="@font/alata"
+                    android:includeFontPadding="false"
                     android:text="To-Do List"
                     android:textColor="@color/white"
                     android:textFontWeight="4"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
+                    android:textSize="20sp" />
 
             </RelativeLayout>
 
@@ -150,15 +96,13 @@
                     android:fontFamily="@font/alata"
                     android:text="timer"
                     android:textColor="@color/white"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
+                    android:textSize="20sp" />
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout2"
         android:layout_width="0dp"
         android:layout_height="204dp"
         android:layout_marginStart="3dp"
@@ -206,8 +150,7 @@
                     android:fontFamily="@font/alata"
                     android:text="notes"
                     android:textColor="#FFFFFF"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
+                    android:textSize="20sp" />
             </RelativeLayout>
 
         </androidx.cardview.widget.CardView>
@@ -237,8 +180,7 @@
                     android:fontFamily="@font/alata"
                     android:text="calendar"
                     android:textColor="#FFFFFF"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
+                    android:textSize="20sp" />
 
                 <ImageView
                     android:id="@+id/imageView2"
@@ -258,11 +200,11 @@
         android:layout_width="0dp"
         android:layout_height="100dp"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="16dp"
         android:orientation="horizontal"
         android:padding="5dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -298,8 +240,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_marginEnd="0dp"
                     android:layout_marginBottom="0dp"
-                    android:text="Profile"
-                    android:textStyle="bold" />
+                    android:text="Profile" />
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
@@ -330,8 +271,7 @@
                     android:layout_below="@id/imageView7"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="5dp"
-                    android:text="Contact"
-                    android:textStyle="bold" />
+                    android:text="Contact" />
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
@@ -363,8 +303,7 @@
                     android:layout_below="@id/imageView8"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="5dp"
-                    android:text="FAQ"
-                    android:textStyle="bold" />
+                    android:text="FAQ" />
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
@@ -396,8 +335,7 @@
                     android:layout_below="@id/imageView9"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="5dp"
-                    android:text="Settings"
-                    android:textStyle="bold" />
+                    android:text="Settings" />
 
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
