--- a/app/src/main/res/layout/to_do_list_recycler.xml
+++ b/app/src/main/res/layout/to_do_list_recycler.xml
@@ -12,12 +12,44 @@
 
         <TextView
             android:id="@+id/taskName"
-            android:layout_width="wrap_content"
-            android:layout_height="54dp"
-            android:layout_marginLeft="130dp"
-            android:layout_marginTop="20dp"
+            android:layout_width="147dp"
+            android:layout_height="53dp"
+            android:layout_marginLeft="120dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="120dp"
             android:text="TextView"
-            android:textSize="24sp" />
+            android:textAlignment="center"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="310dp"
+            android:layout_height="81dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="200dp"
+            android:layout_marginRight="50dp"
+            android:background="@drawable/btn_circle"
+            android:backgroundTint="#D2A24D"
+            android:stateListAnimator="@null"
+            android:text="Button" />
+
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginTop="230dp"
+            android:background="@color/white"
+            android:backgroundTint="@color/white"
+            android:buttonTint="@color/white" />
+
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="290dp"
+            android:layout_marginTop="225dp"
+            app:srcCompat="@android:drawable/ic_media_play" />
 
     </RelativeLayout>
 </LinearLayout>
