--- a/app/src/main/res/layout/to_do_list_recycler.xml
+++ b/app/src/main/res/layout/to_do_list_recycler.xml
@@ -10,19 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/taskName"
-            android:layout_width="147dp"
-            android:layout_height="53dp"
-            android:layout_marginLeft="120dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginRight="120dp"
-            android:text="TextView"
-            android:textAlignment="center"
-            android:textSize="20sp" />
-
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/taskDetailButton"
             android:layout_width="310dp"
             android:layout_height="81dp"
             android:layout_marginLeft="50dp"
