--- a/app/src/main/res/drawable-anydpi/ic_addbutton.xml
+++ b/app/src/main/res/drawable-anydpi/ic_addbutton.xml
@@ -3,9 +3,9 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#6F5643"
+    android:tint="#000000"
     android:alpha="0.8">
   <path
       android:fillColor="@android:color/white"
-      android:pathData="M19,3H4.99C3.89,3 3,3.9 3,5l0.01,14c0,1.1 0.89,2 1.99,2h10l6,-6V5C21,3.9 20.1,3 19,3zM7,8h10v2H7V8zM12,14H7v-2h5V14zM14,19.5V14h5.5L14,19.5z"/>
+      android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
 </vector>
