--- a/app/src/main/res/layout/activity_add_task_page.xml
+++ b/app/src/main/res/layout/activity_add_task_page.xml
@@ -8,10 +8,12 @@
 
     <Button
         android:id="@+id/createTaskButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
         android:layout_marginStart="145dp"
         android:layout_marginTop="77dp"
+        android:background="@drawable/btn_circle"
+        android:backgroundTint="#EFE9E9"
         android:text="Create"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/taskDeadline" />
@@ -101,5 +103,13 @@
         app:layout_constraintEnd_toStartOf="@+id/taskDetails"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_addbutton"
+        tools:layout_editor_absoluteX="296dp"
+        tools:layout_editor_absoluteY="461dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
